# kaggle-traveling-santa-2018-prime-paths

./: .gitignore  Pipfile  README.md  get_data.sh  readme.org
ILS/: README.org
commons/: utils.py
cpp/: .gitignore  CMakeLists.txt  README.md  crossover.cc  genome.cc  genome.h  main.cc  path.tsp
cpp/genetic_pool/: 1517156.tsp  1517171.tsp  1517176.tsp  1517178.tsp  1517183.tsp  1517184.tsp  1517186.tsp  1517187.tsp  1517188.tsp  1517194.tsp  1517208.tsp  1517217.tsp  1517221.tsp  1517224.tsp  1517227.tsp  1517228.tsp  1517230.tsp  1517234.tsp  1517235.tsp  1517238.tsp  1517239.tsp  1517241.tsp  1517242.tsp  1517243.tsp  1517244.tsp  1517245.tsp  1517246.tsp  1517247.tsp  1517248.tsp  1517249.tsp  1517251.tsp  1517253.tsp  1517254.tsp  1517255.tsp  1517256.tsp  1517260.tsp  1517263.tsp  1517264.tsp  1517265.tsp  1517270.tsp  (+123 more)
cpp/kdtree/kd-tree/: compute_nn.cpp  distance.cu  distances.cpp   find_best_moves.cpp  kdtree.h  knn  main.cpp  point.h  solution.cpp  solution.h  two_opt.cpp  two_opt.cu
gpu/: CMakeLists.txt  Dockerfile  README.md
gpu/src/: io.hpp  k_opt.cu  k_opt.hpp  kdtree.hpp  knn.hpp  main.cu  primes.hpp  problem.hpp  wtf.hpp
gpu/src/cuda/: distances.cu  k_opt.cu
gpu/test/: test_io.hpp  test_k_opt.hpp  test_problem.hpp
prototypage/: .gitignore  Hybrid GA Prototypage.ipynb  Hybrid GA.ipynb  hga.py  ils.py
scripts/: baseline.py  ga.py  nearest.py  randomiser.py
scripts_julia/: 1516399.csv  Manifest.toml  Project.toml  README.md  bruteforce_driver.jl  bruteforce_parallel.jl  dump-all-memory-of-pid.sh  ga_2opt.jl  knn_driver.jl  knn_opt.jl  knn_parallel.jl  solve_greedy.jl  swapper.jl
scripts_julia_v2/: Manifest.toml  Project.toml  README.md
top/: sub_knn_opt_1.516680222109079e6.csv.tsp  sub_knn_opt_1.5166977060114944e6.csv.tsp  sub_knn_opt_1.5166991927263401e6.csv.tsp  sub_knn_opt_1.5167108306547492e6.csv.tsp  sub_knn_opt_1.5167122925697465e6.csv.tsp  sub_knn_opt_1.5167213962493008e6.csv.tsp  sub_knn_opt_1.5167222504858363e6.csv.tsp  sub_knn_opt_1.5167273688805453e6.csv.tsp  sub_knn_opt_1.5167285400166253e6.csv.tsp  sub_knn_opt_1.5167289725652488e6.csv.tsp  sub_knn_opt_1.5167312153021502e6.csv.tsp  sub_knn_opt_1.5167320695386857e6.csv.tsp  sub_knn_opt_1.5167339961594162e6.csv.tsp  sub_knn_opt_1.5167386354140872e6.csv.tsp  sub_knn_opt_1.5167507133000589e6.csv.tsp  sub_knn_opt_1.5167642393306966e6.csv.tsp  sub_knn_opt_1.5167715548042923e6.csv.tsp  sub_knn_opt_1.5167717686638625e6.csv.tsp
tsp_solver/: Dockerfile
(+87 files in other folders)
